[tool.poetry]
name = "cyberowl"
version = "1.0.0"
description = "A daily updated summary of the most frequent security incidents currently being reported from different sources."
authors = ["karimhabush <karim.habush@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Scrapy = "^2.11.0"
selenium = "^4.25.0"
mkdocs = "^1.3.1"
mkdocs-material = "^9.0.3"
mkdocstrings = {extras = ["python"], version = ">=0.19,<0.26"}
pyOpenSSL = "^24.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
